tests/traci/set_variable/Vehicle/ChangeRoute/invalidOnInternal/options.traci
--vehroute-output=vehroutes.xml --no-step-log --net-file net.net.xml --route-files routes.rou.xml 
